<resources>
    <string name="app_name">Kodework</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="about">About Us</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="abt_details">We are a group of enthusiastic and passionate individuals who love what we do. We develop web products that are capable of putting you on the digital map. We are buzz word compliant and have proven experience with single page web applications, PHP, cross platform mobile applications, Appcelerator Titanium, Ionic Framework, Phonegap, Sencha touch, HTML5, SVG animations, UI research, UI prototyping, Agile, responsive web design, and WordPress, among other skills. What this means is that you come to us with an idea and we use our expertise to structure, animate and style that dream and make it a reality. Our team is an eclectic bunch of people, all of whom have one thing in common – we love the web and we think developing web products is fun. Our team is both inquisitive and innovative – we look not only to do new things but also for new ways to do things. We’ve put a significant amount of effort into putting a team together that can handle your entire project, right from design to delivery and beyond. Our goal is to form a partnership with you that lasts a lifetime, not because you’re bound to us, but because you can rely on us to deliver an excellent product at all times.</string>
    <string name="outsource">Offshore software development requires not only specialist skills and knowledge but can also take a long time and be expensive. It therefore makes sense to bring in a software development outsourcer when you want to increase the output of your own development team without having to employ additional expensive programmers to implement your ideas. We’ve been providing services like this to companies in Western Europe for over a decade. So, why develop the software by yourself, if we can do that for you?</string>
    <string name="careers">Careers</string>
    <string name="services">Services</string>
    <string name="portfolio">Portfolio</string>
    <string name="blog">Blog</string>
    <string name="tech_skills">Tech skills</string>
    <string name="our_locations">Our Locations</string>
    <string name="connect_with_us">Connect With Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="who_are_we">Who are we?</string>
    <string name="our_team">Our Team</string>
    <string name="business_out">We have recently moved into our new studio in Mumbai after having reached our housing limit in the previous office. Six months into business and we are already expanding. Outsourcing as an industry was big in the 2000s but it has been hit by a new wave of evolution. Some of the major companies have been hit hard and are shifting gears to accommodate requirements. In big organisations it’s rather hard to pivot or evolve. They are definitely trying to do all they can, but do they have the time they need?
Fast forward to the 2014/15 start-ups. They are motivated, small-sized and pack a real punch. They are nurtured in tech and bloom in the cloud. This makes them flexible. Mritunjay Singh, operating chief of outsourcer Persistent Systems, predicts a “bloodbath” in which only nimbler companies will survive.

Agility is a problem when your 5000+ employees, agility is a problem when you’ve got “processes”. It’s a problem when employees have been doing the same thing for years and are not used to change. Flexibility is a dream here. Not being flexible enough is leading to a drop in the global outsourcing deals.

This is quite a huge problem for India as outsourcing accounts for 20% of its exports of goods and services. But does this mean that start-ups have the upper hand? “In 2000, the services business was disrupted by the introduction of offshore players who could outsource functions better than others,” said Persistent’s Mr. Singh. “We see the current disruption playing out in a similar way.…Some companies will do well, others will fail.”</string>
    <string name="business_analysis">What is Business Analysis? Business Analysis is the practice of enabling change in an organizational context, by defining needs and recommending solutions that deliver value to stakeholders. Business Analysis Helps Businesses Do Business Better Business Analysis is a disciplined approach for introducing and managing change to organisations, whether they are for-profit businesses, governments, or non-profits. It is used to identify and articulate the need for change in how organisations work, and to facilitate that change. It is the process of identifying and defining the solutions that will maximize the value delivered by an organisation to its stakeholders. It operates across all levels of an organisation and may be involved in everything from defining strategy, to creating the enterprise architecture, to defining the goals and requirements for programs and projects or supporting continuous improvement in its technology and processes. The value of business analysis is in realisation of benefits, avoidance of cost, identification of new opportunities, understanding of required capabilities and modeling the organisation. Through the effective use of business analysis, It is possible to ensure an organisation realises these benefits, ultimately improving the way it does business.</string>
    <string name="web_des">Web design is a combination of knowledge, techniques and different skills that together help to build a website. Web design is closely related to user interface, user experience, graphic design, content design and optimization for search engines.

The customer’s first impression is very important, and a professionally designed website makes all the difference. What characterises a good design is that the website is simple and easy for customers to navigate. At the same time, we emphasize cleanness, simplicity and a good user experience.

We provide you with a design that belongs in 2015, while providing the customer with a good user experience.</string>
    <string name="web_design">Web Design</string>
    <string name="responsive_design">Responsive Design</string>
    <string name="resp_text">The number of users who visit the internet via mobile devices such as iPhones and iPads increases significantly each year. It is therefore essential that the website is optimised for mobile devices, so we can give the customer a good user experience across various devices.</string>
    <string name="web_dev">Web Development</string>
    <string name="we_dev_text">We have enormous resources and a lot of expertise in web development and can therefore customise the website just the way you want it. We can supply everything from custom functions and modules to advanced systems and applications. We place great emphasis on integrating our sites to systems that make it easy for your business to keep the website updated following the launch. For this we use so-called Content Management Systems (CMS).</string>
    <string name="cms">Content Management Systems</string>
    <string name="cms_txt">We know that many are concerned about how they will be able to keep the website updated following the launch. We solved this challenge by linking the website to a content management system (CMS) that makes it easy to keep the website updated, without the need for additional expertise.</string>
    <string name="cms_we">Here is a selection of Content Management Systems that we use:</string>
    <string name="qa_text">We have a dedicated team whose sole focus is to ensure that the delivered product is of the highest quality. This team goes through every single category on the website and checks for bugs and errors, as well as tests the website across different browsers and mobile devices. Errors are noted and reported to a development team that takes care of this. We use Agile Methodology, Sprint planning, SCRUM, CMMI processes, Regression tests, Sanity tests, Smoke tests, AdHoc tests and LOAD testing.</string>
    <string name="qa">Quality Assurance</string>
</resources>