<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/about_us">
        <menu>
            <item
                android:id="@+id/who"
                android:icon="@drawable/ic_supervisor_account_black_24dp"
                android:title="@string/who_are_we" />
            <item
                android:id="@+id/team"
                android:icon="@drawable/ic_wc_black_24dp"
                android:title="@string/our_team" />

        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/careers" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_cloud_done_black_24dp"
            android:title="@string/services" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_important_devices_black_24dp"
            android:title="@string/portfolio" />

        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/ic_art_track_black_24dp"
            android:title="@string/blog" />
        <item
            android:id="@+id/nav_tech"
            android:icon="@drawable/ic_nfc_black_24dp"
            android:title="@string/tech_skills" />
    </group>



    <item android:title="@string/contact_us">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_plus_one_black_24dp"
                android:title="@string/connect_with_us" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_satellite_black_24dp"
                android:title="@string/our_locations" />
        </menu>
    </item>

</menu>
